--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
                             <h1 class="max-w-lg text-xl font-semibold tracking-tight text-[#313131] xl:text-2xl dark:text-white">
                                 Subscribe.</h1> <!-- Changed font sizing for different devices -->
                             <div class="flex">
-                                <input id="email" type="text">
+                                <input id="email" type="text" class="px-4 py-2 text-[#313131] 
+                                bg-white border rounded-md dark:bg-[#313131] dark:text-white 
+                                dark:border-[#313131] focus:border-[#d86943] dark:focus:border-[#d86943] 
+                                focus:outline-none focus:ring focus:ring-opacity-40 focus:ring-[#d86943]">
+                                <!-- Added class to input tag for border -->
                                 <button class="w-full px-6 py-2.5 bg-white">
                                     Subscribe
                                 </button>
