--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
                     <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 sm:gap-y-10 lg:grid-cols-4">
                         <!--Changed grid for different device sizes-->
                         <div class="sm:col-span-2">
-                            <h1 class="max-w-lg text-xl font-semibold tracking-tight text-[#313131] xl:text-2xl dark:text-white">
+                            <h1 class="max-w-lg text-xl font-semibold tracking-tight text-[#313131] xl:text-2xl 
+                            dark:text-white">
                                 Subscribe.</h1> <!-- Changed font sizing for different devices -->
                             <div class="flex">
                                 <input id="email" type="text" class="px-4 py-2 text-[#313131] 
@@ -23,7 +24,9 @@
                                 dark:border-[#313131] focus:border-[#d86943] dark:focus:border-[#d86943] 
                                 focus:outline-none focus:ring focus:ring-opacity-40 focus:ring-[#d86943]">
                                 <!-- Added class to input tag for border -->
-                                <button class="w-full px-6 py-2.5 bg-white">
+                                <button class="w-full px-6 py-2.5 bg-orange-600 border-orange-600 w-20
+                                dark:bg-[#313131] border dark:text-white rounded-md mx-4">
+                                <!-- Change size of button-->
                                     Subscribe
                                 </button>
                             </div>
