--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                         <div class="sm:col-span-2">
                             <h1 class="max-w-lg text-xl font-semibold tracking-tight text-[#313131] xl:text-2xl 
                             dark:text-white">
-                                Subscribe.</h1> <!-- Changed font sizing for different devices -->
+                                Subscribe to our newsletter for more updates</h1> <!-- Changed font sizing for different devices -->
                             <div class="flex">
                                 <input id="email" type="text" class="px-4 py-2 text-[#313131] 
                                 bg-white border rounded-md dark:bg-[#313131] dark:text-white 
