--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                                 dark:border-[#313131] focus:border-[#d86943] dark:focus:border-[#d86943] 
                                 focus:outline-none focus:ring focus:ring-opacity-40 focus:ring-[#d86943]">
                                 <!-- Added class to input tag for border -->
-                                <button class="w-full px-6 py-2.5 bg-orange-600 border-orange-600 w-20
-                                dark:bg-[#313131] border dark:text-white rounded-md mx-4">
+                                <button class="px-4 py-2.5 text-[#313131] bg-orange-600 border-orange-600 rounded-md mx-4 
+                                dark:bg-[#313131] border dark:text-white ">
                                 <!-- Change size of button-->
                                     Subscribe
                                 </button>
