added comments for future instructions

--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
                             </div>
                         </div>
                         <div>
-                            <p class="text-[#313131]">Quick Link</p>
+                            <p class="text-[#313131]">Quick Link</p> <!-- Add font weight & color -->
                             <div class="flex">
-                                <a href="#">Home</a>
+                                <a href="#">Home</a> <!-- all a tags add class text color, hover & underline effects-->
                                 <a href="#">Who We Are</a>
                                 <a href="#">Our Philosophy</a>
                             </div>
                         </div>
                         <div>
-                            <p class="text-[#313131]">Technologies</p>
+                            <p class="text-[#313131]">Technologies</p> <!-- Add font weight & color -->
                             <div class="">
                                 <a href="#">HTML</a>
                                 <a href="#">CSS</a>
