--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                                 <input id="email" type="text" class="px-4 py-2 text-[#313131] 
                                 bg-white border rounded-md dark:bg-[#313131] dark:text-white 
                                 dark:border-[#313131] focus:border-[#d86943] dark:focus:border-[#d86943] 
-                                focus:outline-none focus:ring focus:ring-opacity-40 focus:ring-[#d86943]">
+                                focus:outline-none focus:ring focus:ring-opacity-40 focus:ring-[#d86943]"
+                                value="enter your email address"> <!-- grey shade value-->
                                 <!-- Added class to input tag for border -->
                                 <button class="px-4 py-2.5 text-[#313131] bg-orange-600 border-orange-600 rounded-md mx-4 
                                 dark:bg-[#313131] border dark:text-white ">
