changed value to placeholder

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                                 bg-white border rounded-md dark:bg-[#313131] dark:text-white 
                                 dark:border-[#313131] focus:border-[#d86943] dark:focus:border-[#d86943] 
                                 focus:outline-none focus:ring focus:ring-opacity-40 focus:ring-[#d86943]"
-                                value="enter your email address"> <!-- grey shade value-->
+                                placeholder="Email Address">
                                 <!-- Added class to input tag for border -->
                                 <button class="px-4 py-2.5 text-[#313131] bg-orange-600 border-orange-600 rounded-md mx-4 
                                 dark:bg-[#313131] border dark:text-white ">
