margin on y axis added to h1 class

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                         <!--Changed grid for different device sizes-->
                         <div class="sm:col-span-2">
                             <h1 class="max-w-lg text-xl font-semibold tracking-tight text-[#313131] xl:text-2xl 
-                            dark:text-white">
+                            dark:text-white my-5">
                                 Subscribe to our newsletter for more updates</h1> <!-- Changed font sizing for different devices -->
                             <div class="flex">
                                 <input id="email" type="text" class="px-4 py-2 text-[#313131] 
