--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     
                     <hr class="my-6 border-[#d86943]">
                     
-                    <div class="flex">
+                    <div class="flex items-center justify-between">
                         <a href="#">
                             <img class="w-auto h-7" src="https://codespace-assets.global.ssl.fastly.net/wp/assets/website/codespace-primary-logo-light.svg" alt="">
                         </a>
