div flex class for input changed

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                             <h1 class="max-w-lg text-xl font-semibold tracking-tight text-[#313131] xl:text-2xl 
                             dark:text-white my-5">
                                 Subscribe to our newsletter for more updates</h1> <!-- Changed font sizing for different devices -->
-                            <div class="flex">
+                            <div class="flex flex-col mx-auto mt-6 space-y-3 md:space-y-0 md:flex-row">
                                 <input id="email" type="text" class="px-4 py-2 text-[#313131] 
                                 bg-white border rounded-md dark:bg-[#313131] dark:text-white 
                                 dark:border-[#313131] focus:border-[#d86943] dark:focus:border-[#d86943] 
