add comment about text div

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                             <h1 class="max-w-lg text-xl font-semibold tracking-tight text-[#313131] xl:text-2xl 
                             dark:text-white my-5">
                                 Subscribe to our newsletter for more updates</h1> <!-- Changed font sizing for different devices -->
-                            <div class="flex flex-col mx-auto mt-6 space-y-3 md:space-y-0 md:flex-row">
+                            <div class="flex flex-col mx-auto mt-6 space-y-3 md:space-y-0 md:flex-row"> <!-- Change sizing of input for different screen sizes -->
                                 <input id="email" type="text" class="px-4 py-2 text-[#313131] 
                                 bg-white border rounded-md dark:bg-[#313131] dark:text-white 
                                 dark:border-[#313131] focus:border-[#d86943] dark:focus:border-[#d86943] 
@@ -34,7 +34,7 @@
                         </div>
                         <div>
                             <p class="text-[#313131]">Quick Link</p> <!-- Add font weight & color -->
-                            <div class="flex">
+                            <div class="flex sm:row-3 lg:row-4"> <!-- column and rows 3-->
                                 <a href="#">Home</a> <!-- all a tags add class text color, hover & underline effects-->
                                 <a href="#">Who We Are</a>
                                 <a href="#">Our Philosophy</a>
