--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
             <footer class="bg-[#659f8f] dark:bg-[#313131]">
                 <div class="container px-6 py-12 mx-auto">
                     <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 sm:gap-y-10 lg:grid-cols-4">
-                        <!--Changed grid for different device sizes-->
                         <div class="sm:col-span-2">
                             <h1 class="max-w-lg text-xl font-semibold tracking-tight text-[#313131] xl:text-2xl 
                             dark:text-white my-5">
@@ -34,7 +33,7 @@
                         </div>
                         <div>
                             <p class="text-[#313131]">Quick Link</p> <!-- Add font weight & color -->
-                            <div class="flex sm:row-3 lg:row-4"> <!-- column and rows 3-->
+                            <div class="flex flex-col">
                                 <a href="#">Home</a> <!-- all a tags add class text color, hover & underline effects-->
                                 <a href="#">Who We Are</a>
                                 <a href="#">Our Philosophy</a>
@@ -42,7 +41,7 @@
                         </div>
                         <div>
                             <p class="text-[#313131]">Technologies</p> <!-- Add font weight & color -->
-                            <div class="">
+                            <div class="flex flex-col">
                                 <a href="#">HTML</a>
                                 <a href="#">CSS</a>
                                 <a href="#">JavaScript</a>
