hover function added to a tags

--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
                             </div>
                         </div>
                         <div>
-                            <p class="text-[#313131]">Quick Link</p> <!-- Add font weight & color -->
-                            <div class="flex flex-col">
+                            <p class="text-[#313131] font-semibold">Quick Link</p> <!-- Add font weight & color -->
+                            <div class="flex flex-col hover:underline-offset-2">
                                 <a href="#">Home</a> <!-- all a tags add class text color, hover & underline effects-->
                                 <a href="#">Who We Are</a>
                                 <a href="#">Our Philosophy</a>
                             </div>
                         </div>
                         <div>
-                            <p class="text-[#313131]">Technologies</p> <!-- Add font weight & color -->
-                            <div class="flex flex-col">
+                            <p class="text-[#313131] font-semibold">Technologies</p> <!-- Add font weight & color -->
+                            <div class="flex flex-col hover:underline-offset-2">
                                 <a href="#">HTML</a>
                                 <a href="#">CSS</a>
                                 <a href="#">JavaScript</a>
