--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                                 placeholder="Email Address">
                                 <!-- Added class to input tag for border -->
                                 <button class="px-4 py-2.5 text-[#313131] bg-orange-600 border-orange-600 rounded-md mx-4 
-                                dark:bg-[#313131] border dark:text-white ">
-                                <!-- Change size of button-->
+                                dark:bg-[#313131] border dark:text-white hover:font-bold hover:bg-orange-400 hover:border-orange-400">
+                                <!-- Change size of button, focus added-->
                                     Subscribe
                                 </button>
                             </div>
