--- a/index.html
+++ b/index.html
@@ -8,24 +8,22 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body>
-    <footer class="bg-[#659f8f] dark:bg-[#313131]">
+    <footer class="bg-[#659f8f]"> <!-- Add dark settings later-->
         <div class="container">
-            <footer class="bg-[#659f8f] dark:bg-[#313131]">
+            <footer class="bg-[#659f8f]">
                 <div class="container px-6 py-12 mx-auto">
                     <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 sm:gap-y-10 lg:grid-cols-4">
                         <div class="sm:col-span-2">
-                            <h1 class="max-w-lg text-xl font-semibold tracking-tight text-[#313131] xl:text-2xl 
-                            dark:text-white my-5">
+                            <h1 class="max-w-lg text-xl font-semibold tracking-tight text-[#313131] xl:text-2xl">
                                 Subscribe to our newsletter for more updates</h1> <!-- Changed font sizing for different devices -->
                             <div class="flex flex-col mx-auto mt-6 space-y-3 md:space-y-0 md:flex-row"> <!-- Change sizing of input for different screen sizes -->
                                 <input id="email" type="text" class="px-4 py-2 text-[#313131] 
-                                bg-white border rounded-md dark:bg-[#313131] dark:text-white 
-                                dark:border-[#313131] focus:border-[#d86943] dark:focus:border-[#d86943] 
+                                bg-white border rounded-md focus:border-[#d86943] 
                                 focus:outline-none focus:ring focus:ring-opacity-40 focus:ring-[#d86943]"
                                 placeholder="Email Address">
                                 <!-- Added class to input tag for border -->
                                 <button class="px-4 py-2.5 text-[#313131] bg-orange-600 border-orange-600 rounded-md mx-4 
-                                dark:bg-[#313131] border dark:text-white hover:font-bold hover:bg-orange-400 hover:border-orange-400">
+                                border hover:font-bold hover:bg-orange-400 hover:border-orange-400">
                                 <!-- Change size of button, focus added-->
                                     Subscribe
                                 </button>
