--- a/index.html
+++ b/index.html
@@ -15,34 +15,32 @@
                     <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 sm:gap-y-10 lg:grid-cols-4">
                         <div class="sm:col-span-2">
                             <h1 class="max-w-lg text-xl font-semibold tracking-tight text-[#313131] xl:text-2xl">
-                                Subscribe to our newsletter for more updates</h1> <!-- Changed font sizing for different devices -->
-                            <div class="flex flex-col mx-auto mt-6 space-y-3 md:space-y-0 md:flex-row"> <!-- Change sizing of input for different screen sizes -->
+                                Subscribe to our newsletter for more updates</h1>
+                            <div class="flex flex-col mx-auto mt-6 space-y-3 md:space-y-0 md:flex-row">
                                 <input id="email" type="text" class="px-4 py-2 text-[#313131] 
                                 bg-white border rounded-md focus:border-[#d86943] 
                                 focus:outline-none focus:ring focus:ring-opacity-40 focus:ring-[#d86943]"
                                 placeholder="Email Address">
-                                <!-- Added class to input tag for border -->
                                 <button class="px-4 py-2.5 text-[#313131] bg-orange-600 border-orange-600 rounded-md mx-4 
                                 border hover:font-bold hover:bg-orange-400 hover:border-orange-400">
-                                <!-- Change size of button, focus added-->
                                     Subscribe
                                 </button>
                             </div>
                         </div>
                         <div>
-                            <p class="text-[#313131] font-semibold">Quick Link</p> <!-- Add font weight & color -->
-                            <div class="flex flex-col hover:underline-offset-2">
-                                <a href="#">Home</a> <!-- all a tags add class text color, hover & underline effects-->
-                                <a href="#">Who We Are</a>
-                                <a href="#">Our Philosophy</a>
+                            <p class="text-[#313131] font-semibold">Quick Link</p>
+                            <div class="flex flex-col">
+                                <a class="hover:underline-offset-2" href="#">Home</a> <!-- all a tags add class text color, hover & underline effects-->
+                                <a class="hover:underline-offset-2" href="#">Who We Are</a>
+                                <a class="hover:underline-offset-2" href="#">Our Philosophy</a>
                             </div>
                         </div>
                         <div>
-                            <p class="text-[#313131] font-semibold">Technologies</p> <!-- Add font weight & color -->
+                            <p class="text-[#313131] font-semibold">Technologies</p>
                             <div class="flex flex-col hover:underline-offset-2">
-                                <a href="#">HTML</a>
-                                <a href="#">CSS</a>
-                                <a href="#">JavaScript</a>
+                                <a class="hover:underline-offset-2" href="#">HTML</a>
+                                <a class="hover:underline-offset-2" href="#">CSS</a>
+                                <a class="hover:underline-offset-2" href="#">JavaScript</a>
                             </div>
                         </div>
                     </div>
