--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                                 Subscribe to our newsletter for more updates</h1>
                             <div class="flex flex-col mx-auto mt-6 space-y-3 md:space-y-0 md:flex-row">
                                 <input id="email" type="text" class="px-4 py-2 text-[#313131] 
-                                bg-white border rounded-md focus:border-[#d86943] 
-                                focus:outline-none focus:ring focus:ring-opacity-40 focus:ring-[#d86943]"
+                                bg-white border rounded-md focus:border-[#d0e2dd] 
+                                focus:outline-none focus:ring focus:ring-opacity-40 focus:ring-[#d0e2dd]"
                                 placeholder="Email Address">
                                 <button class="px-4 py-2.5 text-[#313131] bg-orange-600 border-orange-600 rounded-md mx-4 
                                 border hover:font-bold hover:bg-orange-400 hover:border-orange-400">
