edited hover:underline class in html file

--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
                         <div>
                             <p class="text-[#313131] font-semibold">Quick Link</p>
                             <div class="flex flex-col">
-                                <a class="hover:underline-offset-2" href="#">Home</a> <!-- all a tags add class text color, hover & underline effects-->
-                                <a class="hover:underline-offset-2" href="#">Who We Are</a>
-                                <a class="hover:underline-offset-2" href="#">Our Philosophy</a>
+                                <a class="hover:underline" href="#">Home</a> <!-- all a tags add class text color, hover & underline effects-->
+                                <a class="hover:underline" href="#">Who We Are</a>
+                                <a class="hover:underline" href="#">Our Philosophy</a>
                             </div>
                         </div>
                         <div>
                             <p class="text-[#313131] font-semibold">Technologies</p>
                             <div class="flex flex-col hover:underline-offset-2">
-                                <a class="hover:underline-offset-2" href="#">HTML</a>
-                                <a class="hover:underline-offset-2" href="#">CSS</a>
-                                <a class="hover:underline-offset-2" href="#">JavaScript</a>
+                                <a class="hover:underline" href="#">HTML</a>
+                                <a class="hover:underline" href="#">CSS</a>
+                                <a class="hover:underline" href="#">JavaScript</a>
                             </div>
                         </div>
                     </div>
@@ -48,7 +48,7 @@
                     <hr class="my-6 border-[#d86943]">
                     
                     <div class="flex items-center justify-between">
-                        <a class="hover:underline-offset-2" href="#">
+                        <a class="hover:underline" href="#">
                             <img class="w-auto h-7" src="https://codespace-assets.global.ssl.fastly.net/wp/assets/website/codespace-primary-logo-light.svg" alt="">
                         </a>
                     </div>
